--- a/myPage.css
+++ b/myPage.css
@@ -5,9 +5,10 @@
 	vertical-align: middle;
 	float: left; 
 	width: 100%;
+	box-shadow: 10px 10px 5px #000000;
 }
 
 h1{
 	text-align: center;
-	text-shadow: 2px 2px #ff0000;	
+	text-shadow: 2px 2px #000000;	
 }
