--- a/myPage.css
+++ b/myPage.css
@@ -1,5 +1,5 @@
 .titleHead{
-	background-color: #76048A;
+	background-color: #460152;
 	color: white;
 	height: 75px;
 	vertical-align: middle;
@@ -16,5 +16,5 @@ h1{
 .project{
 	width:80%;
 	margin-left:10%;
-	background-color: #B35BC3;
+	background-color: #E5ADEF;
 }
