--- a/myPage.css
+++ b/myPage.css
@@ -9,7 +9,7 @@
 }
 
 body{
-	background-color: #C0C0C0;
+	background-color: white;
 }
 
 h1{
@@ -20,5 +20,13 @@ h1{
 .project{
 	width:80%;
 	margin-left:10%;
-	background-color: #E5ADEF;
+	background-color: #C0C0C0;
+}
+
+p{
+	margin-left: 5px;
+}
+
+h2{
+	margin-left: 5px;
 }
