--- a/myPage.css
+++ b/myPage.css
@@ -9,7 +9,7 @@
 }
 
 body{
-	background-color: #C0C0C0;
+	background-color: #A0A0A0;
 }
 
 h1{
@@ -20,7 +20,7 @@ h1{
 .project{
 	width:80%;
 	margin-left:10%;
-	background-color: white;
+	background-color: #C0C0C0;
 }
 
 p{
