--- a/myPage.css
+++ b/myPage.css
@@ -14,7 +14,14 @@ body{
 
 h1{
 	text-align: center;
-	text-shadow: 2px 2px #000000;	
+	text-shadow: 2px 2px #000000;
+	
+	font-family: 'Avant Garde', Avantgarde, 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
+	font-size: 24px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 26px;	
 }
 
 .project{
@@ -27,11 +34,26 @@ h1{
 
 p{
 	margin-left: 10px;
+	
+	font-family: 'Avant Garde', Avantgarde, 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
+	font-size: 14px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 400;
+	line-height: 20px;
 }
 
 h2{
 	margin-left: 10px;
 	color: #460152;
+	margin-top: 10px;
+	
+	font-family: 'Avant Garde', Avantgarde, 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
+	font-size: 14px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 15px;
 }
 
 video{
