--- a/myPage.css
+++ b/myPage.css
@@ -46,7 +46,7 @@ p{
 h2{
 	margin-left: 10px;
 	color: #460152;
-	
+	margin-top: 50px;
 	
 	font-family: 'Avant Garde', Avantgarde, 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
 	font-size: 20px;
