--- a/myPage.css
+++ b/myPage.css
@@ -5,12 +5,14 @@
 	vertical-align: middle;
 	float: left; 
 	width: 100%;
-	box-shadow: 10px 10px 5px #000000;
-	
+	box-shadow: 10px 10px 5px #404040;
+	overflow: hidden;
+	position: absolute;
 }
 
 body{
 	background-color: #A0A0A0;
+	overflow: auto;
 }
 
 h1{
