--- a/newPage.css
+++ b/newPage.css
@@ -9,8 +9,8 @@
 }
 
 body{
-	background-color: #FFFFFF;
-	background-image: url("grass.jpg");
+	background-color: #000000;
+	background-image: url("Picture10.png");
 }
 
 h1{
