--- a/newPage.css
+++ b/newPage.css
@@ -14,6 +14,7 @@ body{
 
 .grid_element {
   display: inline-block;
+  background-color: #FFFFFF;
   width: 200px;
   height:200px;
   zoom: 1;         /* for IE */
