--- a/newPage.css
+++ b/newPage.css
@@ -12,6 +12,11 @@ body{
 	background-image: url("grass.png");
 }
 
+.about{
+	width: 100%;
+	height: 200px;
+}
+
 .grid_element {
   display: inline-block;
   background-color: #FFFFFF;
