--- a/newPage.css
+++ b/newPage.css
@@ -33,6 +33,23 @@ body{
   margin-bottom:8vw;
 }
 
+.text{
+	width:340px;
+	height:217px;
+	background:#FFF;
+    opacity:0;
+}
+     
+.grid_element:hover .text {
+ opacity:0.6;
+  text-align:justify;
+   color:#000000;
+    font-size:20px;
+     font-weight:700;
+      font-family:"Times New Roman", Times, serif;
+       padding:30px;
+        }
+
 
 h1{
 	text-align: center;
